manifests/minikube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iceci
    name: iceci-db
  name: iceci-db
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
  selector:
    app: iceci
    name: iceci-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iceci
    name: iceci-web
  name: iceci-web
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: iceci
    name: iceci-web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceci-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceci
      name: iceci-operator
  template:
    metadata:
      labels:
        app: iceci
        name: iceci-operator
      name: postgres
    spec:
      containers:
      - env:
        - name: ICECI_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: OPERATOR_NAME
          value: iceci-operator
        - name: STEP_SERVICE_ACCOUNT
          value: iceci-step
        image: iceci/iceci-operator:alpha7
        imagePullPolicy: Always
        name: iceci-operator
      serviceAccountName: iceci-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iceci
    name: iceci-sync
  name: iceci-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceci
      name: iceci-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: iceci
        name: iceci-sync
      name: iceci-sync
    spec:
      containers:
      - env:
        - name: ICECI_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: OPERATOR_NAME
          value: iceci-sync
        - name: ICECI_DB_DIALECT
          valueFrom:
            secretKeyRef:
              key: DIALECT
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_PORT
          valueFrom:
            secretKeyRef:
              key: PORT
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_HOST
          valueFrom:
            secretKeyRef:
              key: HOST
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_PASS
          valueFrom:
            secretKeyRef:
              key: PASSWORD
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_USER
          valueFrom:
            secretKeyRef:
              key: USER
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_NAME
          valueFrom:
            secretKeyRef:
              key: DB
              name: iceci-db-settings-42thtcch2c
        image: iceci/iceci-sync:alpha7
        imagePullPolicy: Always
        name: iceci-sync
      restartPolicy: Always
      serviceAccountName: iceci-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iceci
    name: iceci-web
  name: iceci-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceci
      name: iceci-web
  template:
    metadata:
      labels:
        app: iceci
        name: iceci-web
      name: iceci-web
    spec:
      containers:
      - image: iceci/iceci-ui:alpha7
        imagePullPolicy: Always
        name: iceci-ui
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: nginx-config
      - env:
        - name: ICECI_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: ICECI_DB_DIALECT
          valueFrom:
            secretKeyRef:
              key: DIALECT
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_PORT
          valueFrom:
            secretKeyRef:
              key: PORT
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_HOST
          valueFrom:
            secretKeyRef:
              key: HOST
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_PASS
          valueFrom:
            secretKeyRef:
              key: PASSWORD
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_USER
          valueFrom:
            secretKeyRef:
              key: USER
              name: iceci-db-settings-42thtcch2c
        - name: ICECI_DB_NAME
          valueFrom:
            secretKeyRef:
              key: DB
              name: iceci-db-settings-42thtcch2c
        image: iceci/iceci-api:alpha7
        imagePullPolicy: Always
        name: iceci-api
      restartPolicy: Always
      serviceAccountName: iceci-manager
      volumes:
      - configMap:
          name: iceci-ui-config-c7ffdhcht7
        name: nginx-config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: iceci
    name: iceci-db
  name: iceci-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceci
      name: iceci-db
  serviceName: iceci-db
  template:
    metadata:
      labels:
        app: iceci
        name: iceci-db
      name: iceci-db
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: PASSWORD
              name: iceci-db-settings-42thtcch2c
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: USER
              name: iceci-db-settings-42thtcch2c
        - name: POSTGRES_DB
          valueFrom:
            secretKeyRef:
              key: DB
              name: iceci-db-settings-42thtcch2c
        image: postgres:11
        imagePullPolicy: IfNotPresent
        name: iceci-db
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: pgdata
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iceci
spec:
  rules:
  - host: iceci.local
    http:
      paths:
      - backend:
          serviceName: iceci-ui
          servicePort: 80
        path: /
